More changes to makefile init

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CFLAGS= -std=gnu99
 DEPS = curl_calls.h iwinfo.h
-#LIBS=$(LDFLAGS) -L. -lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
+LIBS=$(LDFLAGS) -L. -lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
 OBJ =superman.o 
 
 %.o: %.c $(DEPS)
