--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC = cc
 # CFLAGS="-WALL" make superman
 CFLAGS= -std=gnu99
 DEPS = curl_calls.h iwinfo.h
-#LIBS=$(LDFLAGS) -L. -lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
+LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
 OBJ =superman.o 
 
 %.o: %.c $(DEPS)
