--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC = cc
 # CFLAGS="-WALL" make superman
 CFLAGS= -std=gnu99
-DEPS = curl_calls.h iwinfo.h
+DEPS = curl_calls.h iwinfo.h types.h network.h
 LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
 OBJ =superman.o 
 
