--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,22 @@
-CFLAGS= -std=gnu99
+CC = -std=gnu99
+#CFLAGS=-Wall -m32 -O -g
+#LDFLAGS = -m32 -O -g
+
 #CFLAGS= -std=c99
 #CC="$(TARGET_CC) -fhonour-cflags".
-# CFLAGS="-WALL" make superman
-DEPS = #types.h network.h packet.h
-LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
-OBJ = superman.o Radiotap.o #network.o packet.o
+# CFLAGS= -Wall -m32 -O -g
+# DEPS = #types.h network.h packet.h
+# LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
+# OBJ = superman.o Radiotap.o #network.o packet.o
 
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $<
+# %.o: %.c $(DEPS)
+# 	$(CC) -c -o $@ $<
 
-superman: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+superman: superman.c Radiotap.c
+	gcc -o superman superman.c Radiotap.c -I. -lpcap
+
+# superman: $(OBJ)
+# 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 clean:
 	rm -rf *.o 
