--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,20 @@
-CC = -std=gnu99
-#CFLAGS=-Wall -m32 -O -g
-#LDFLAGS = -m32 -O -g
-
+CFLAGS= -std=gnu99
 #CFLAGS= -std=c99
 #CC="$(TARGET_CC) -fhonour-cflags".
 # CFLAGS= -Wall -m32 -O -g
-# DEPS = #types.h network.h packet.h
-# LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
-# OBJ = superman.o Radiotap.o #network.o packet.o
+DEPS = endian.h #types.h network.h packet.h
+LIBS=$(LDFLAGS) -L. -lpcap #-lssl -luci -lcrypto -lrt -lpthread -lcurl -ljson-c  -liwinfo
+OBJ = superman.o radiotap.o #network.o packet.o
 
-# %.o: %.c $(DEPS)
-# 	$(CC) -c -o $@ $<
+%.o: %.c $(DEPS)
+	$(CC) -c -o $@ $<
 
-superman: superman.c radiotap.c
-	gcc -o superman superman.c radiotap.c -I. -lpcap
-
-# superman: $(OBJ)
-# 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+superman: $(OBJ)
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 clean:
 	rm -rf *.o 
 	rm -rf superman
 
+# superman: superman.c radiotap.c
+# 	gcc -o superman superman.c radiotap.c -I. -lpcap
